Fix alignment of hr line number in vertical-rl writing mode.

--- a/src/stylesheets/components/editor/_styles.scss
+++ b/src/stylesheets/components/editor/_styles.scss
@@ -198,6 +198,12 @@
         margin-top: -($editor-line-height-computed + $editor-hr-border) / 2;
       }
     }
+
+    .numbers.vertical-rl & {
+      &::before {
+        margin-right: -($editor-line-height-computed + $editor-hr-border) / 2;
+      }
+    }
   }
 
   sup,
